<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
              android:orientation="vertical">

    <TextView
        android:text="@string/creators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEMPORARY UI. WILL WORK ON LATER"
        android:id="@+id/textView2"
        android:layout_above="@+id/scoreLabel"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_game"
        android:id="@+id/gameButton"
        android:onClick="onGameButtonClicked"
        android:layout_above="@id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="32dp"
        android:background="@color/main_accent"
        android:textColor="@color/button_material_light"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/scoreTextView"
        android:layout_centerInParent="true"
        android:textSize="64dp"
        android:textIsSelectable="false"
        android:textColor="@color/main_accent"
        android:singleLine="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_label"
        android:id="@+id/scoreLabel"
        android:layout_above="@id/scoreTextView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_select"
        android:id="@+id/textView_level_select"
        android:layout_below="@+id/scoreTextView"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_level_select"
        android:entries="@array/level_names"
        android:layout_below="@+id/textView_level_select"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dialog"/>


</RelativeLayout>
